[package]
name = "glowdoc"
version = "1.0.0"
edition = "2021"
description = "Modern Documentation Generator"
license = "Apache-2.0"
authors = ["GlowDoc Team"]

[[bin]]
name = "glowdoc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
regex = "1.10"
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-staticfile = "0.9"